initial ver. of project complete. initial styling complete. created media queries

--- a/style.css
+++ b/style.css
@@ -231,3 +231,29 @@ footer {
     text-align: center;
     margin-top: 20px;
 }
+
+
+/* Media Queries */
+@media (max-width: 768px) {
+    header .container,
+    #newsletter .container,
+    #boxes .container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+  
+    #showcase .container {
+        padding-bottom: 50px;
+    }
+    
+    .box {
+        width: 80%;
+    }
+    
+    #about .container,
+    #services .container {
+        grid-template-columns: 1fr;
+    }
+}
